force-app/main/default/objects/Partner_Portal_Tab__c/Partner_Portal_Tab__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community :</description>
    <label>Partner Portal Tab</label>
    <nameField>
        <label>Partner Portal_Tab Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Portal Tabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>