force-app/main/default/objects/Partner_Portal_Tab__c/fields/Community_Tab_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_Tab_URL__c</fullName>
    <label>Community Tab URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>