force-app/main/default/objects/Partner_Portal_Tab__c/fields/Footer_Content__c.field-meta.xml
<CustomField>
    <fullName>Footer_Content__c</fullName>
    <description>This field contains the content which will display in bottom iframe</description>
    <label>Footer Content</label>
    <length>150</length>
    <type>Text</type>
</CustomField>