force-app/main/default/objects/Partner_Portal_Tab__c/fields/Footer_Width__c.field-meta.xml
<CustomField>
    <fullName>Footer_Width__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Footer Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>