force-app/main/default/objects/Partner_Portal_Tab__c/fields/Header_Content__c.field-meta.xml
<CustomField>
    <fullName>Header_Content__c</fullName>
    <description>This field contains the content which will display in top iframe.</description>
    <label>Header Content</label>
    <length>150</length>
    <type>Text</type>
</CustomField>