force-app/main/default/objects/Partner_Portal_Tab__c/fields/Header_Footer_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Header_Footer_Profiles__c</fullName>
    <label>Header Footer Profiles</label>
    <length>80</length>
    <type>Text</type>
</CustomField>