force-app/main/default/objects/Partner_Portal_Tab__c/fields/Header_Height__c.field-meta.xml
<CustomField>
    <fullName>Header_Height__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Header Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>