force-app/main/default/objects/Partner_Portal_Tab__c/fields/Local_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Name__c</fullName>
    <label>Local Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>