force-app/main/default/objects/Partner_Portal_Tab__c/fields/Partner_PortalName__c.field-meta.xml
<CustomField>
    <fullName>Partner_PortalName__c</fullName>
    <label>Partner_PortalName</label>
    <referenceTo>Partner_Portal__c</referenceTo>
    <relationshipLabel>Partner_Portal_Tabs</relationshipLabel>
    <relationshipName>Partner_Portal_Tabs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>