force-app/main/default/objects/Partner_Portal_Tab__c/fields/Partner_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Partner_Profiles__c</fullName>
    <label>Partner Profiles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GRID_VCA_Marketing</fullName>
            </value>
            <value>
                <fullName>GRID_VCA_Sales</fullName>
            </value>
            <value>
                <fullName>GRID_VCA_Support</fullName>
            </value>
            <value>
                <fullName>GRID_VCA_Technical</fullName>
            </value>
            <value>
                <fullName>GRID_VCA_Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>