force-app/main/default/objects/Partner_Portal_Tab__c/fields/Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permission Set</label>
    <referenceTo>Portal_Permission_Sets__c</referenceTo>
    <relationshipLabel>Partner Portal Tabs</relationshipLabel>
    <relationshipName>Partner_Portal_Tabs</relationshipName>
    <type>Lookup</type>
</CustomField>