force-app/main/default/objects/Partner_Portal_Tab__c/fields/Tab_URL__c.field-meta.xml
<CustomField>
    <fullName>Tab_URL__c</fullName>
    <label>Tab URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>