force-app/main/default/objects/Partner_Portal_Tab__c/listViews/All_Language.listView-meta.xml
<ListView>
    <fullName>All_Language</fullName>
    <columns>Language__c</columns>
    <columns>NAME</columns>
    <columns>Local_Name__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Permission_Set__c</columns>
    <columns>Community_Tab_URL__c</columns>
    <columns>Tab_URL__c</columns>
    <columns>Partner_PortalName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>English</value>
    </filters>
    <label>All - Language</label>
    <language>en_US</language>
</ListView>